--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,8 @@ AC_INIT([imgbased], [0.1], [fabiand@fedoraproject.org])
 AC_PREFIX_DEFAULT([/usr])
 AM_MAINTAINER_MODE([enable])
 AM_INIT_AUTOMAKE([foreign 1.11 -Wall -Wno-portability silent-rules tar-pax no-dist-gzip dist-xz subdir-objects])
+AC_REQUIRE_AUX_FILE([tap-driver.sh])
+AC_PROG_AWK
 AM_SILENT_RULES([yes])
 
 AC_SUBST([FEDORA],[[`rpm --eval '%{fedora}'|sed 's/[^0-9]//g'`]])
