ks: Better flattening
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,10 +10,8 @@ TESTS = tests/check_python.test tests/check_packaging.test
 hooksdir = $(prefix)/lib/imgbased/hooks.d/
 pyimagebaseddir = $(pythondir)/imgbased
 
-
 dist_sbin_SCRIPTS = \
   data/imgbase
-
 
 dist_pyimagebased_PYTHON = \
   src/__init__.py \
@@ -22,24 +20,30 @@ dist_pyimagebased_PYTHON = \
 dist_hooks_SCRIPTS = \
   data/hooks/persistence
 
-
-dist_doc_DATA = \
-  data/kickstarts/rootfs.ks \
-  data/kickstarts/runtime-layout.ks \
-  data/kickstarts/rootfs.template.ks \
-  data/kickstarts/runtime-layout.template.ks \
-  data/kickstarts/repositories.partial.ks \
-  data/kickstarts/packages.partial.ks \
-  data/kickstarts/header.partial.ks \
-  data/kickstarts/post.partial.ks
-
-
-%.ks:
-	ksflatten --config="$*.template.ks" --output="$@"
-
-
 EXTRA_DIST = \
   README.md \
   imgbased.spec \
   $(TESTS) \
   tests/common.sh
+
+DERIVED_KS = data/kickstarts/rootfs.ks \
+  data/kickstarts/runtime-layout.ks
+
+dist_doc_DATA = \
+  data/kickstarts/flatten.py \
+  data/kickstarts/rootfs.template.ks \
+  data/kickstarts/runtime-layout.template.ks \
+  data/kickstarts/repositories.partial.ks \
+  data/kickstarts/packages.partial.ks \
+  data/kickstarts/header.partial.ks \
+  data/kickstarts/post.partial.ks \
+  $(DERIVED_KS)
+
+%.ks: %.template.ks
+	./data/kickstarts/flatten.py "$<" > "$@"
+
+rpm: dist
+	rpmbuild -ta $(DIST_ARCHIVES)
+
+CLEANFILES = $(DERIVED_KS)
+
