man: Update manpage
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,6 +44,8 @@ doc_DATA = \
 
 man8_MANS = docs/imgbase.8
 
+doc: $(doc_DATA) $(dist_doc_DATA) $(man8-MANS)
+
 boot.iso:
 	echo "Please fetch any boot.iso from the desired Fedora release"
 
