--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 
 python:
-  - "2.6"
   - "2.7"
 
 install:
@@ -10,3 +9,4 @@ install:
 script:
  - "./autogen.sh"
  - "make check"
+ - "make dist"
