--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ python:
   - "2.7"
 
 before_install:
- - "sudo apt-get install autoconf automake"
+ - "sudo apt-get install autoconf automake autotools-dev"
+ - "sudo apt-get install asciidoc xsltproc"
+ - "autoreconf -vif"
 
 install:
   - "pip install -r requirements.txt"
