test: Improve functional testing
Now a 9p fs is used to enable file exchanges between the host and guest.
This allows to easily write tests on the host side and run them inside
the guest.

Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -55,7 +55,7 @@ doc: $(doc_DATA) $(dist_doc_DATA) $(man8-MANS)
 check:
 	[[ "$(IMAGE)" ]] && $(MAKE) check-functional || :
 
-check-functional: $(IMAGE)
+check-functional:
 	[[ -f $(IMAGE) ]]
 	VIRTEXPECT_IMAGE=$(IMAGE) nosetests -v tests/functional/*.py
 
