hooks: Add a rebase hook
The rebase hook is similar to the persistence hook, but applies the
changes to a new layer, by applying the delta between the previous layer
and it's base.

Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,8 @@ dist_pyimagebased_PYTHON = \
   src/imgbase.py
 
 dist_hooks_SCRIPTS = \
-  data/hooks/persistence
+  data/hooks/persistence \
+  data/hooks/rebase
 
 EXTRA_DIST = \
   README.md \
