travis: Fix job
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ install:
 
 script:
  - "./autogen.sh"
- - "mkdir build ; cd build"
- - "../configure"
+ - "./configure"
  - "make check"
  - "make dist"
