Update Makefile to enhanve image building
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,29 @@
 
 SHELL := /bin/bash
-LMC ?= $(shell which livemedia-creator)
-BOOTISO ?= $(abs_builddir)/boot.iso
+
+SUDO ?= sudo -E
+LMC ?= livemedia-creator
+CURL ?= curl
+
+VM_CPUS ?= 4
+VM_RAM ?= 4096
+
+# Units can be used here
+VM_GROWSIZE ?= 10GB
+
+ARCH := x86_64
+RELEASEVER := 20
+BOOTISO ?= Fedora-$(RELEASEVER)-$(ARCH)-netinst.iso
+
+# LMC options
+TMPDIR := build-$(shell date +%Y%m%d%H%M%S)
+LMC_ARGS = --ram=$(VM_RAM) --vcpus=$(VM_CPUS)
+LMC_ARGS += --tmp="$(TMPDIR)"
+
+
+$(BOOTISO):
+	$(CURL) -L -O http://download.fedoraproject.org/pub/fedora/linux/releases/$(RELEASEVER)/Fedora/$(ARCH)/os/images/$(BOOTISO)
+
 
 TEST_LOG_DRIVER = env AM_TAP_AWK='$(AWK)' $(SHELL) \
                   $(top_srcdir)/build-aux/tap-driver.sh
@@ -77,7 +99,7 @@ rpm: dist
 
 CLEANFILES = $(DERIVED_KS)
 
-%.ks: template/%.ks $(PARTIAL_KS)
+data/kickstarts/%.ks: data/kickstarts/template/%.ks $(PARTIAL_KS)
 	mkdir -p $$(dirname "$@")
 	$(srcdir)/data/kickstarts/flatten.py "$<" > "$@"
 
@@ -89,27 +111,36 @@ CLEANFILES = $(DERIVED_KS)
 	mkdir -p $$(dirname $@)
 	asciidoc -d manpage -b docbook -o $@ $<
 
-%.img: data/kickstarts/%.ks
-	sudo -E $(LMC) --make-disk \
+%.raw: data/kickstarts/%.ks
+	mkdir $(TMPDIR)
+	chmod a+rwX $(TMPDIR)
+	$(SUDO) $(LMC) --make-disk \
           --ks "$<" \
-          --iso $(BOOTISO) --vcpus 4 \
+          --iso $(BOOTISO) \
           --image-name "$@"
-	sudo mv "/var/tmp/$@" .
+	mv -v $(TMPDIR)/"$@" .
+
+%.qcow2: %.raw
+	$(SUDO) virt-sparsify --compress --convert qcow2 "$<" "$@"
+# FIXME selinux relable must hapen before init-label, before we cna enable
+# relable
+# The options also need to be given explicitly, because some others destroy the firstboot/initial-setup
+	$(SUDO) virt-sysprep --no-selinux-relabel --add "$@" --enable abrt-data,bash-history,blkid-tab,ca-certificates,crash-data,cron-spool,dhcp-client-state,dovecot-data,hostname,lvm-uuids,machine-id,mail-spool,net-hostname,net-hwaddr,pacct-log,package-manager-cache,random-seed,smolt-uuid,ssh-hostkeys,ssh-userdir,sssd-db-log,udev-persistent-net,utmp,yum-uuid
+	$(SUDO) qemu-img resize "$@" $(VM_GROWSIZE)
 
 %.fs: data/kickstarts/%.ks
-	sudo -E $(LMC) --make-fsimage \
+	$(SUDO) $(LMC) $(LMC_ARGS) --make-fsimage \
           --ks "$<" \
           --iso $(BOOTISO) --vcpus 4 \
           --image-name "$@"
 	sudo mv "/var/tmp/$@" .
 
 %.iso: %.fs
-	sudo -E $(LMC) --make-iso \
+	$(SUDO) $(LMC) $(LMC_ARGS) --make-iso \
           --fs-image "$<" \
-	  --image-name "$@"
+          --image-name "$@"
 
 %.squash: %.img
-	sudo -E virt-sparsify "$<" "$<.sparse"
 	mksquashfs "$<.sparse" "$@" -comp xz
 	ls -shal "$<" "$<.sparse" "$@"
-	sudo rm "$<.sparse"
+	$(SUDO) rm "$<.sparse"
