Build images in builddir
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -110,7 +110,7 @@ data/kickstarts/%.ks: data/kickstarts/template/%.ks $(PARTIAL_KS)
 %.raw: data/kickstarts/%.ks $(BOOTISO)
 	mkdir $(TMPDIR)
 	chmod a+rwX $(TMPDIR)
-	$(SUDO) $(LMC) --make-disk \
+	$(SUDO) $(LMC) $(LMC_ARGS) --make-disk \
           --ks "$<" \
           --iso $(BOOTISO) \
           --image-name "$@"
