test: Refactor building and testing
$ make build
$ make check-local

Should do the trick now

Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,33 +1,12 @@
 
 SHELL := /bin/bash
 
-SUDO ?= sudo -E
-LMC ?= livemedia-creator
-CURL ?= curl
-
-VM_CPUS ?= 4
-VM_RAM ?= 4096
-
-# Units can be used here
-VM_GROWSIZE ?= 10GB
-
-ARCH := x86_64
-RELEASEVER := 20
-BOOTISO ?= Fedora-$(RELEASEVER)-$(ARCH)-netinst.iso
-
-# LMC options
-TMPDIR := result-$(shell date +%Y%m%d%H%M%S)
-LMC_ARGS = --ram=$(VM_RAM) --vcpus=$(VM_CPUS)
-LMC_ARGS += --tmp="$(TMPDIR)"
-
-
-$(BOOTISO):
-	$(CURL) -L -O http://download.fedoraproject.org/pub/fedora/linux/releases/$(RELEASEVER)/Fedora/$(ARCH)/iso/$(BOOTISO)
-
-
 TEST_LOG_DRIVER = env AM_TAP_AWK='$(AWK)' $(SHELL) \
                   $(top_srcdir)/build-aux/tap-driver.sh
 TESTS = tests/package/check_python.test tests/package/check_packaging.test
+
+IMAGE ?= runtime-layout
+TESTIMAGE ?= $(IMAGE).qcow2
 
 hooksdir = $(pkgdatadir)/hooks.d/
 pyimagebaseddir = $(pythondir)/$(PACKAGE_NAME)
@@ -35,7 +14,7 @@ pyimagebaseddir = $(pythondir)/$(PACKAGE_NAME)
 vpath $(srcdir)
 
 dist_sbin_SCRIPTS = \
-  data/imgbase
+  scripts/imgbase
 
 dist_pyimagebased_PYTHON = \
   src/__init__.py \
@@ -51,26 +30,18 @@ EXTRA_DIST = \
   packaging/rpm/imgbased.spec \
   $(TESTS) \
   tests/package/common.sh \
-  tests/functional/sanity.py \
-  tests/functional/virtexpect.py
+  tests/runtime/*.py
 
-DERIVED_KS = data/kickstarts/rootfs.ks \
-  data/kickstarts/runtime-layout.ks
+DERIVED_KS = data/images/kickstarts/*.ks
 
-PARTIAL_KS = \
-  data/kickstarts/partial/repositories.ks \
-  data/kickstarts/partial/packages.ks \
-  data/kickstarts/partial/header.ks \
-  data/kickstarts/partial/post.ks \
-  data/kickstarts/partial/minimization.ks
+PARTIAL_KS = data/images/kickstarts/partial/*.ks
 
 doc_DATA = \
   $(DERIVED_KS)
 
 dist_doc_DATA = \
-  data/kickstarts/flatten.py \
-  data/kickstarts/template/rootfs.ks \
-  data/kickstarts/template/runtime-layout.ks \
+  data/images/kickstarts/flatten.py \
+  $(DERIVED_KS) \
   $(PARTIAL_KS) \
   docs/imgbase.asc \
   docs/imgbase.8.asc
@@ -79,12 +50,27 @@ man8_MANS = docs/imgbase.8
 
 doc: $(doc_DATA) $(dist_doc_DATA) $(man8-MANS)
 
-check:
-	[[ "$(IMAGE)" ]] && $(MAKE) check-functional || :
+#
+# Build the test image
+#
+build: data/images/$(TESTIMAGE)
+	mv data/images/$(TESTIMAGE) $(srcdir)
 
-check-functional:
-	[[ -f $(IMAGE) ]]
-	VIRTEXPECT_IMAGE=$(IMAGE) nosetests -v $(srcdir)/tests/functional/*.py
+data/images/%.qcow2:
+	cd data/images && make run-install DISK_NAME=$(TESTIMAGE) KICKSTART=kickstarts/$(IMAGE).ks
+
+#
+# Run simple and advanced test
+#
+check: 
+	[[ -f "$(TESTIMAGE)" ]] && $(MAKE) check-runtime || :
+
+#
+# Run runtime/functional test on the test image
+# Intentioanlly no dependency on build
+#
+check-runtime: $(TESTIMAGE)
+	cd tests/runtime && make check-local IMAGE=$(abs_srcdir)/$(TESTIMAGE)
 
 doc: $(man8_MANS)
 
@@ -96,10 +82,6 @@ rpm: dist
 
 CLEANFILES = $(DERIVED_KS)
 
-data/kickstarts/%.ks: data/kickstarts/template/%.ks $(PARTIAL_KS)
-	mkdir -p $$(dirname "$@")
-	$(srcdir)/data/kickstarts/flatten.py "$<" > "$@"
-
 %: %.xml
 	xsltproc -o $@ -nonet \
 	http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl $<
@@ -108,36 +90,3 @@ data/kickstarts/%.ks: data/kickstarts/template/%.ks $(PARTIAL_KS)
 	mkdir -p $$(dirname $@)
 	asciidoc -d manpage -b docbook -o $@ $<
 
-%.raw: data/kickstarts/%.ks $(BOOTISO)
-	mkdir $(TMPDIR)
-	chmod a+rwX $(TMPDIR)
-	$(SUDO) $(LMC) $(LMC_ARGS) --make-disk \
-          --ks "$<" \
-          --iso $(BOOTISO) \
-          --image-name "$@"
-	mv -v $(TMPDIR)/"$@" .
-
-%.qcow2: %.raw
-	$(SUDO) virt-sparsify --compress --convert qcow2 "$<" "$@"
-# FIXME selinux relable must hapen before init-label, before we cna enable
-# relable
-# The options also need to be given explicitly, because some others destroy the firstboot/initial-setup
-	$(SUDO) virt-sysprep --no-selinux-relabel --add "$@" --enable abrt-data,bash-history,blkid-tab,ca-certificates,crash-data,cron-spool,dhcp-client-state,dovecot-data,hostname,lvm-uuids,machine-id,mail-spool,net-hostname,net-hwaddr,pacct-log,package-manager-cache,random-seed,smolt-uuid,ssh-hostkeys,ssh-userdir,sssd-db-log,udev-persistent-net,utmp,yum-uuid
-	$(SUDO) qemu-img resize "$@" $(VM_GROWSIZE)
-
-%.fs: data/kickstarts/%.ks
-	$(SUDO) $(LMC) $(LMC_ARGS) --make-fsimage \
-          --ks "$<" \
-          --iso $(BOOTISO) --vcpus 4 \
-          --image-name "$@"
-	sudo mv "/var/tmp/$@" .
-
-%.iso: %.fs
-	$(SUDO) $(LMC) $(LMC_ARGS) --make-iso \
-          --fs-image "$<" \
-          --image-name "$@"
-
-%.squash: %.img
-	mksquashfs "$<.sparse" "$@" -comp xz
-	ls -shal "$<" "$<.sparse" "$@"
-	$(SUDO) rm "$<.sparse"
