test: Run rnutime tests on imgbase master
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/tests/runtime/Makefile
+++ b/tests/runtime/Makefile
@@ -1,4 +1,4 @@
 
 check-local:
 	[ -f $(IMAGE) ]
-	python testrunner.py $(IMAGE) $(PWD) "nm-online ; pwd ; ls ; nosetests --verbose --no-byte-compile --with-xunit ; init 0"
+	python testrunner.py $(IMAGE) $(PWD) "nm-online ; pwd ; ls ; git pull ; nosetests --verbose --no-byte-compile --with-xunit ; init 0"
