tests: Make target for inner test runner
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/tests/runtime/Makefile
+++ b/tests/runtime/Makefile
@@ -1,4 +1,14 @@
 
 check-local:
 	[ -f $(IMAGE) ]
-	python testrunner.py $(IMAGE) $(PWD) "nm-online ; pwd ; ls ; git pull ; nosetests --verbose --no-byte-compile --with-xunit ; init 0"
+	python testrunner.py $(IMAGE) $(PWD) "make check-local-inner ; init 0"
+
+#
+# This target is run inside the VM
+#
+check-local-inner:
+	nm-online
+	cd /root/imgbased && git pull && ./autogen.sh && ./configure && make install
+	pwd
+	ls
+	nosetests --verbose --no-byte-compile --with-xunit
