--- a/tests/runtime/Makefile
+++ b/tests/runtime/Makefile
@@ -1,13 +1,13 @@
 
 RUNTIMEDIR=tests/runtime
-
+INNERLOG=check-local-inner.log
 #
 # This target will start the VM
 # Within the VM it will call check-local-inner
 #
 check-local:
 	[ -f $(IMAGE) ]
-	python -u $(RUNTIMEDIR)/testrunner.py $(IMAGE) $(PWD) "set -x ; make -f $(RUNTIMEDIR)/Makefile check-local-inner 2>&1 | tee check-local-inner.log ; init 0"
+	python -u $(RUNTIMEDIR)/testrunner.py $(IMAGE) $(PWD) "set -x ; make -f $(RUNTIMEDIR)/Makefile check-local-inner 2>&1 | tee $(INNERLOG) ; init 0"
 
 #
 # This target is run inside the VM
@@ -16,6 +16,5 @@ check-local:
 check-local-inner:
 	nm-online
 	git describe --always
-	make install
 	pwd
-	cd $(RUNTIMEDIR) && nosetests --verbose --no-byte-compile --with-xunit
+	export PATH=$(PWD)/scripts/:$$PATH PYTHONPATH=$(PWD)/src ; cd $(RUNTIMEDIR) && nosetests --verbose --no-byte-compile --with-xunit
