test: Add parallelism to travis
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ install:
 script:
  - "./autogen.sh"
  - "./configure"
- - "make check"
  - "make dist"
+ - "make check -j5"
 
 notifications:
   irc: "chat.freenode.net#ovirt-node"
