--- a/Makefile.am
+++ b/Makefile.am
@@ -56,7 +56,7 @@ data/images/%.qcow2:
 # Now some targets to test the installation part
 #
 rootfs.qcow2:
-	if [[ -f $< ]]; then echo "rootfs already exists" ; else make image-build IMAGE=rootfs ; fi
+	if [[ -f $@ ]]; then echo "rootfs already exists" ; else make image-build IMAGE=rootfs ; fi
 
 rootfs.tar.xz: rootfs.qcow2
 	if [[ -f $< ]]; then echo "Tarball already exists" ; else guestfish -i -a $< tar-out / $@ compress:xz ; fi
