build: Make image-install rootfs url configurable
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -61,11 +61,11 @@ rootfs.qcow2:
 rootfs.tar.xz: rootfs.qcow2
 	if [[ -e $@ ]]; then echo "Tarball already exists" ; else guestfish -i -a $< tar-out / $@ compress:xz ; fi
 
-
+image-install: ROOTFS_URL=http://10.0.2.2:\$$(PYPORT)/rootfs.tar.xz
 image-install: rootfs.tar.xz
 	-rm -f data/images/kickstarts/installation.ks data/images/rootfs.tar.xz
 	-ln -s $$PWD/rootfs.tar.xz data/images/
-	make image-build IMAGE=installation SED_KS="s#@ROOTFS_URL@#http://10.0.2.2:\$$(PYPORT)/rootfs.tar.xz#"
+	make image-build IMAGE=installation SED_KS="s#@ROOTFS_URL@#$(ROOTFS_URL)#"
 
 
 #
