build: Fix strip-disklabel
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -98,7 +98,7 @@ strip-disklabel: INTIMAGE = intermediate-$(SRCIMAGE)
 strip-disklabel: DSTIMAGE = $(SRCIMAGE)-without-disklabel
 strip-disklabel:
 	[[ -f "$(SRCIMAGE)" ]]
-	set -x ; dd conv=sparse if="$(SRCIMAGE)" skip=$$(partx -sbg -n1 -o START "$(SRCIMAGE)" | egrep -o "[0-9]*") of="$(INTIMAGE)"
+	set -x ; dd conv=sparse if="$(SRCIMAGE)" ibs=1c skip=$$(partx -sbg -n1 -o START "$(SRCIMAGE)" | egrep -o "[0-9]*") of="$(INTIMAGE)"
 	mv -v "$(INTIMAGE)" "$(DSTIMAGE)"
 
 doc: $(man8_MANS)
